# SimpleAR

./: .gitignore  generate.py  pyproject.toml
scripts/: ci.sh  install_env.sh
scripts/eval/: bench_dpg.sh  bench_dpg2.sh  bench_geneval.sh  bench_geneval2.sh
scripts/tokens/: extract_token.sh  generate_meta.py
scripts/train/: train_example.sh
simpar/: utils.py
simpar/eval/: model_t2i.py
simpar/model/: builder.py
simpar/model/language_model/: modeling_qwen2.py  simpar_qwen2.py
simpar/train/: llava_trainer.py  train.py
tests/: test_generate.py  test_imports.py
