[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpar"
version = "1.7.0.dev0"
description = "SimpAR: Pushing the Frontier of Autoregressive Visual Generation through Pretraining, SFT, and RL"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    # Core
    "accelerate>=0.29.1",
    "transformers>=4.56.0,<5",
    "trl==0.15.2",
    "peft==0.4.0",
    "deepspeed==0.14.4",
    "bitsandbytes>=0.49.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    # Data
    "datasets",
    "numpy>=1.26.1",
    "scipy",
    "ijson",
    # Vision
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "open_clip_torch",
    "timm",
    "opencv-python",
    "imageio",
    "mediapy",
    # Logging / experiment tracking
    "wandb",
    "loguru",
    # Utilities
    "ftfy",
    "httpx>=0.24.0",
    "hf_transfer",
    "iopath",
    "pydantic",
    "requests",
    "sentencepiece>=0.2.0",
    "shortuuid",
    "tyro",
    "pytorch_lightning",
    # Serving
    "fastapi",
    "uvicorn",
    "markdown2[all]",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools.packages.find]
include = ["simpar*", "trl*"]
exclude = [
    "assets*",
    "benchmark*",
    "checkpoints*",
    "debug_checkpoints*",
    "dist*",
    "docs",
    "mlx_configs*",
    "notebooks*",
    "playground*",
    "project_checkpoints*",
    "scripts*",
    "tests*",
    "wandb*",
]

[tool.black]
line-length = 240
